--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -122,7 +122,7 @@ Then, you can extend this to software engineering, where a greenfield project is
 
 Depending on how you chose to handle it, starting from an code base that is already written can either be very much helping, or you can be shooting yourself in the foot. 
 Most of the time, Shiny projects are not built as reproducible infrastructures: you will find a series of `library()` calls, no functions structure _per se_, no documentation, and no tests. 
-In that case, we would advice to do it "the hard way", or at least what seems to be the hard way: throw the app out away and start from scratch...
+In that case, we would advise to do it "the hard way", or at least what seems to be the hard way: throw the app out away and start from scratch...
 
 Well, not really from scratch: extract the core business logic of the app and make it a package. 
 Take some time with the developer(s) that has built the current app, so that you can make them extract the core business logic, i.e. all the pieces of code that do not need a reactive context to run. 
