disclaimer about tech, #47

--- a/index.Rmd
+++ b/index.Rmd
@@ -97,16 +97,35 @@ Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-
 
 [Suggest a Resource!](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues)
 
-## Software information and conventions {-}
+## Disclaimer {-}
 
-I used the **knitr**\index{knitr} package [@xie2015] and the **bookdown**\index{bookdown} package [@R-bookdown] to compile my book. My R session information is shown below:
+Open source is moving (very) fast, and some of the tools described in this book are  still under active development. 
+But good news! 
+A large portion of this book is about the methodology, and not purely the technology, so even if some of the packages and code described in this book become obsolete, a significant part of what is described in this book will still be relevant. 
 
+When reading this book, remember that they are a "snapshot" of various technologies and packages, which might some day become out of date, have breaking changes, or even disappear.
+We will try to update the online version whenever changes are made to the codebase of the packages used in this book, so feel free to browse the online version. 
+
+The current version of this book has been compiled on:
+
+```{r}
+Sys.Date()
+```
+
+With the following configuration:
+
+<details>
+    <summary>See Session Information</summary>
 ```{r index-2 }
 xfun::session_info()
 ```
+</details>
+
+## Software information and conventions {-}
+
+The book has been built with the **knitr**\index{knitr} package [@xie2015] and the **bookdown**\index{bookdown} package [@R-bookdown] to compile my book. 
 
 Package names are in curly brackets in code format (e.g., `{rmarkdown}`), and inline code and filenames are formatted in a typewriter font (e.g., `knitr::knit('foo.Rmd')`). Function names are followed by parentheses (e.g., `bookdown::render_book()`).
-
 
 ## Acknowledgments {-}
 
@@ -117,7 +136,7 @@ Package names are in curly brackets in code format (e.g., `{rmarkdown}`), and in
 
 // TODO : 
 
-```{r index-3, echo = FALSE}
+```{r index-3, include = FALSE}
 # Some internal funs
 right_link <- function(text, link){
   htmltools::tagList(
