--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -54,7 +54,7 @@ We can not stress it enough but __dependencies matter__. You need to handle them
 
 Third, let's say you are building a big appplication.
 Something with thousands of lines of code.
-While doing that, you can not built this large application by writting all the codebase into one, maybe two files, that is simply impossible to maintain on the long run, nor to use on a daily basis while developing. 
+While doing that, you can not built this large application by writting all the codebase into one, maybe two files, that is simply impossible to maintain in the long run, nor to use on a daily basis while developing. 
 So, what to do? 
 Let us split everything into smaller files that we can call! 
 Og, and maybe we can store these files in a specific directory.
@@ -649,7 +649,7 @@ This is the case for specific computation and algorithm, custom plot or `geom` f
 These two components do not have to live together. 
 They should not live together if you want to keep your sanity when you build an app.
 
-> You will end up having to rerun the app from scratch and spend five minutes clicking everywhere just to be sure you have correctly set the color palette for the graph on the last `tabPanel()`. 
+You will end up having to rerun the app from scratch and spend five minutes clicking everywhere just to be sure you have correctly set the color palette for the graph on the last `tabPanel()`. 
 
 Trust us, we have been there, and it is not pretty. 
 
@@ -721,6 +721,12 @@ You will be able to build a reproducible example to explore, illustrate and impr
 This function can be tested, documented and reused outside the application. 
 Moreover, this approach lowers the cognitive load when debugging: you either debug an application issue, or a business logic issue. 
 You never debug both at the same time.
+
+Even more, think about the future: how likely are the colors or the UI subject to change, compare to how likely the core algorithms are to change?
+As said in _The Art of Unix Programming_, "_Fashions in the look and feel of GUI toolkits may come and go, but raster operations and compositing are forever_".
+In other words, the core back-end, once consolidated, will potentially stay unchanged forever. 
+On the other hand, the front-end might change: new colors, new graphic designs, new interactions, new visualization libraries... 
+Whenever this will happen, you will be happy you have separated the business logic from the application logic, as you will have to change less code.
 
 How to do that?
 Add you application logic inside a file (typically, a module), and the business logic in another R script (typically starting with `fct_` or `utils_`).
