--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -11,7 +11,7 @@ But let's state the truth: no matter how complex and innovative your back-end is
 That's the hard truth. 
 If people can not understand how to use your application, or if your application front-end does not work at all, your application is not successful, no matter how innovative and incredible the computation algorithms in the back-end are.
 
-As you are building a complex, production-grade Shiny application, do not under-estimate the necessity for a successful front-end: it is after all the first thing (and probably the only thing) that the end-users of your web application will see, and our natural taste, as R developers, for back-end/server logic can deserve us on the long run: by neglecting the UI and the UX, you will make your application less likely to be adopted among your users ; which is a good way to fail your application project.
+As you are building a complex, production-grade Shiny application, do not under-estimate the necessity for a successful front-end: it is after all the first thing (and probably the only thing) that the end-users of your web application will see, and our natural taste, as R developers, for back-end/server logic can play against us in the long run: by neglecting the UI and the UX, you will make your application less likely to be adopted among your users ; which is a good way to fail your application project.
 
 ## Simplicity is Gold
 
@@ -351,6 +351,11 @@ It's also possible to build your own with a little bit of HTML, CSS and JavaScri
 
 ### What is feature-creep?
 
+> Even more often (at least in the commercial software world) excessive complexity comes from project requirements that are based on the marketing fad of the month rather than the reality of what customers want or software can actually deliver. Many a good design has been smothered under marketing's pile of “checklist features” — features that, often, no customer will ever use. And a vicious circle operates; the competition thinks it has to compete with chrome by adding more chrome. Pretty soon, massive bloat is the industry standard and everyone is using huge, buggy programs not even their developers can love.
+
+`r right_link('The Art of Unix Programming', 'http://www.catb.org/~esr/writings/taoup/html/ch01s06.html')`
+
+
 Feature-creep is the process of adding features to the app that complexify the usage and the maintenance of the product, to the point that extreme feature-creep can lead to the product being entirely unusable and completely impossible to maintain. 
 This movement always starts well-intentioned: easier navigation, more information, more visualizations, modifiable elements, and so on and so forth. 
 It can come from project managers or dev, but users can also be responsible for asking more and more features in the app.
@@ -382,7 +387,7 @@ Then they will select something in the `selectInput()`, but chances are not the 
 
 In real life usage, people make mistakes using the app, they do not move the sliders to the right place, so if the application reacts to their every moves, the experience using the app can be bad: in the example above, full reactivity means that you will get 4 "wrong" computations of the plot before getting it right. 
 
-In the `{tidytuesday201942}` application example, let's imagine all the elements on the left automatically update the plot: especially in a context of a learning tool, reacting to any configuration change will launch a lot of useless computation, slowing the app on the long run, and making the user experience poorer. 
+In the `{tidytuesday201942}` application example, let's imagine all the elements on the left automatically update the plot: especially in a context of a learning tool, reacting to any configuration change will launch a lot of useless computation, slowing the app in the long run, and making the user experience poorer. 
 
 ![](img/tidytuesdayapp.png)
 
