--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -20,7 +20,7 @@ Same thing: we're jumping straight into solving programming problem when someone
 
 Of course, implementing your own solution might be a good thing in specific cases: avoiding heavy dependencies, incompatible licensing, the joy of intellectual challenge... 
 But when building production software, it is safer to go for an existing solution if it exists and fits in the project: existing packages/software that are widely used by the community and by the industry benefit from wider testing, wider documentation, and a larger audience if you need to ask questions.
-And of course, it saves time, be it immediately or on the long run: re-using an existing solution allows you to save time re-implementing it, so you save time today, but it also prevent you from having to detect and correct bugs, saving you time tomorrow^[
+And of course, it saves time, be it immediately or in the long run: re-using an existing solution allows you to save time re-implementing it, so you save time today, but it also prevent you from having to detect and correct bugs, saving you time tomorrow^[
 Of course, it is not an absolute rule: you might also inherit from the bug created by the open source solution. 
 ].
 
@@ -79,6 +79,7 @@ But beware: too complex maps are also unreadable!
 ## Ask questions
 
 Before starting to code, the safe call will be to ask your team/client (depending on the project) a series of question just to get a good grasp of the whole project. 
+
 Here is a (non-exhaustive) list of information you might need along the way. 
 
 Side note: of course, these questions do not cover the core functionalities of the application: I'm pretty sure you have thought about covering this already. 
