--- a/16-common-app-caveats.Rmd
+++ b/16-common-app-caveats.Rmd
@@ -455,7 +455,7 @@ But at a global level, lighter UI computation from the server side helps the gen
 
 Compare:
 
-```{r}
+```{r 16-common-app-caveats-10}
 library(shiny)
 ui <- function(){
   tagList(
@@ -483,7 +483,7 @@ shinyApp(ui, server)
 
 to
 
-```{r}
+```{r 16-common-app-caveats-11}
 library(shiny)
 ui <- function(){
   tagList(
@@ -518,7 +518,7 @@ And let's imagine it takes a quarter of a second to render the DOM element, that
 Almost every Shiny inputs, even the custom ones from packages, come with an `update_` function that allows to change the input values from the server side, instead of recreating the UI entirely. 
 For example, here is a way to update the content of a `selectInput` from the server side:
 
-```{r 16-common-app-caveats-10 }
+```{r 16-common-app-caveats-12 }
 library(shiny)
 ui <- function(){
   tagList(
@@ -563,7 +563,7 @@ In other word, if you have `selectInput("x", "x")`, and that you remove this inp
 
 For example, in the following example, the `input$val` value will not be removed once you have called `removeUI(selector = "#val")`.
 
-```{r 16-common-app-caveats-11 }
+```{r 16-common-app-caveats-13 }
 library(shiny)
 ui <- function(){
   tagList(
@@ -663,7 +663,7 @@ Another type of data analysed in a shiny application is one contained inside an 
 Database are wildly used in the data science world, and in the software engineering as a whole. 
 Being a widely used source of data, databases come with API and drivers that help retrieving and transferring data: be it SQL, NoSQL, or even graph.
 
-Using a database is one of the solution for making your app lighter, and more efficient on the long run, notably if you need to scale your app to thousands of visitors. 
+Using a database is one of the solution for making your app lighter, and more efficient in the long run, notably if you need to scale your app to thousands of visitors. 
 Indeed, if you plan on having your app scale to numerous people, that will mean that a lot of R processes will be triggered. 
 And if your data is contained in your app, this will mean that each R process will take a significant amount of RAM if the dataset is large. 
 For example, if your dataset alone takes ~300 mb of RAM, that means that if you want to launch the app 10 times, you will need ~3gb of RAM.
@@ -684,7 +684,7 @@ For a more extensive coverage of using databases in R, please follow these resou
 
 How to choose between these three methodologies:
 
-```{r 16-common-app-caveats-12, echo= FALSE}
+```{r 16-common-app-caveats-14, echo= FALSE}
 knitr::kable(
   data.frame(
     Choice = c("Package data", "Reading files", "External DataBase"), 
