--- a/13-secure.Rmd
+++ b/13-secure.Rmd
@@ -94,7 +94,7 @@ The modifications made in these development branches will then be transferred (d
 
 (ref:gitbranchcap) Branches in git.
 
-```{r, echo=FALSE, fig.cap="(ref:gitbranchcap)"}
+```{r 13-secure-1, echo=FALSE, fig.cap="(ref:gitbranchcap)"}
 knitr::include_graphics("img/Git_branches_fork.svg")
 ```
 
@@ -152,7 +152,7 @@ Here is a summary of this process:
 
 (ref:gitflowcap) Presentation of a git flow (Vincent Driessen, http://nvie.com).
 
-```{r, echo=FALSE, fig.cap="(ref:gitflowcap)"}
+```{r 13-secure-2, echo=FALSE, fig.cap="(ref:gitflowcap)"}
 knitr::include_graphics("img/GitFlowHotfixBranch.png")
 ```
 
@@ -214,7 +214,7 @@ And the nice thing is that you can test for various versions of R, so that you a
 All of this is defined in the `.travis.yml` file, which is to be put at the root of your source directory, a file that is automatically generated when calling `usethis::use_travis()`.
 Here is an example of one of this file, for the `{golem}` package:
 
-```{r 13-secure-1, echo = FALSE,warning=FALSE, comment=""}
+```{r 13-secure-3, echo = FALSE,warning=FALSE, comment=""}
 readLines("https://raw.githubusercontent.com/ThinkR-open/golem/dev/.travis.yml") %>% 
   glue::as_glue() %>% 
   cat(sep = "\n")
