--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -2,14 +2,16 @@
 
 # UX Matters {#matters}
 
-We have a natural tendency, as R-coders, to be focused on the back-end, i.e the server part of the application^[aka what happens in the server side of a Shiny App]. 
-Which is perfectly normal—chances are yodid not't come to R to design front-ends
-^[Front-end are the visual parts of your application, the one your user interacts with, as opposed to the back-end, which is what is installed on the server, the part the end user does not see. 
-In Shiny, front-end is what correspond to the UI, back-end to the server.]. 
-
-But let's state the truth: no matter how complex and innovative your back-end is, your application is bad if your User Experience (UX) is bad. 
+Let's state the truth: no matter how complex and innovative your back-end is, your application is bad if your User Experience (UX) is bad. 
 That's the hard truth. 
-If people can not understand how to use your application, or if your application front-end does not work at all, your application is not successful, no matter how innovative and incredible the computation algorithms in the back-end are.
+
+We have a natural tendency, as R-coders, to be focused on the back-end, i.e the server part of the application^[aka what happens in the server side of a Shiny App]. 
+Which is perfectly normal—chances are you did not come to R to design front-ends^[
+Front-end are the visual parts of your application, the one your user interacts with, as opposed to the back-end, which is what is installed on the server, the part the end user does not see. 
+In Shiny, front-end is what correspond to the UI, back-end to the server.
+]. 
+
+However, if people can not understand how to use your application, or if your application front-end does not work at all, your application is not successful, no matter how innovative and incredible the computation algorithms in the back-end are.
 
 As you are building a complex, production-grade Shiny application, do not under-estimate the necessity for a successful front-end: it is after all the first thing (and probably the only thing) that the end-users of your web application will see, and our natural taste, as R developers, for back-end/server logic can play against us in the long run: by neglecting the UI and the UX, you will make your application less likely to be adopted among your users ; which is a good way to fail your application project.
 
@@ -19,26 +21,23 @@ As you are building a complex, production-grade Shiny application, do not under-
 
 > __Colin Chapman CBE, Founder of Lotus Cars__
 
-There are mainly two contexts where you will be building a web app with R: 
+Aiming for simplicity is a hard thing, but some rules will help you build a better UX, paving the way for a successful application.
 
-+ for professional use (i.e people will rely on this app to do their job)
-+ for fun (i.e people will just use the app as a distraction)
+There are mainly two contexts where you will be building a web app with R: for professional use (_i.e_ people will rely on this app to do their job), or for fun (_i.e_ people will just use the app as a distraction)
 
 But both cases have something in common: people will want the app to be usable, and __easily__ usable. 
 
 If people use your app in a professional context, they do not want to fight with your interface, read complex manuals, or lose time understanding what they are supposed to do and how they are supposed to use your application. 
 In other words, they want an efficient tool: something that, beyond being accurate, is easy to grasp.
-In a professional context, when it comes to "Business applications", remember that the easier the learning curve the better the user experience.
-Think about all the professional applications and softwares that you have been ranting about during your professional life, all these cranky user interfaces you have not understand and/or you need to relearn every time you use them. 
+In a professional context, when it comes to "Business applications", remember that quicker you understand the interface, the better the user experience.
+Think about all the professional applications and software that you have been ranting about during your professional life, all these cranky user interfaces you have not understand and/or you need to relearn every time you use them. 
 You do not want your app to be one of these applications. 
 
-And on the other end, if users open your app for fun, they are not going to fight your app into submission: they are just going to give up if it is too complex to be used.
+And on the other hand, if users open your app for fun, they are not going to fight against your application: they are just going to give up if the app is too complex to be used.
 Even a game has to appear easy to use when the users open it.
 
-Aiming for simplicity is a hard thing, but following some rules will help you start on a solid ground.
-In this section, we'll review two general principals: the "do not make me think" principle, which states that interfaces should be as self-explanatory as possible, and the "Rule of least surprise", stating that elements should behave the way they are commonly expected to behave.
-These two rules aim at solving one issue: the bigger the cognitive load of your app is, the harder it will be for the end-user to use your app on a daily basis.
-And of course, the less a success your project will be. 
+In this section, we will review two general principles: the "do not make me think" principle, which states that interfaces should be as self-explanatory as possible, and the "Rule of least surprise", stating that elements should behave the way they are commonly expected to behave.
+These two rules aim at solving one issue: the bigger the cognitive load of your app, the harder it will be for the end-user to use it on a daily basis.
 
 ### How we read the web: scanning content 
 
@@ -201,7 +200,7 @@ When we are browsing the web, we have a series of pre-conception about what thin
 For example, we expect an underline text to be clickable: so there is a good chance that if you use underline text inside your app, the user will try to click on it. 
 Usually, the link is also colored differently from the rest of the text. 
 Same goes for the pointer of the mouse, which usually switch from an arrow to a small hand with a finger up. 
-A lot of other conventions exist on the web, and you should endeavor to follow them: a clickable link should have at least one of the properties we just described—and if it is neither underlined nor colored nor changing the pointer when it is hovered, chances are that the usewill not't click on it. 
+A lot of other conventions exist on the web, and you should endeavor to follow them: a clickable link should have at least one of the properties we just described—and if it is neither underlined nor colored nor changing the pointer when it is hovered, chances are that the user will not click on it. 
 
 Just imagine for a second if our "Download" button in the `{tidytuesday201942}` app did not actually download the graph you had generated. 
 Even more, imagine if this button did not download the graph but something else. 
@@ -234,7 +233,7 @@ To the one with a little bit of CSS (which is the one online):
 
 Yes, it is subtle, yet the second version of the button is clearer to understand.
 
-Least surprise is crucial to make the user experience a good one: users rarely think that if something is behaving unexpectedly on an app, it is because of the app?they willll usually think it is their fault.
+Least surprise is crucial to make the user experience a good one: users rarely think that if something is behaving unexpectedly on an app, it is because of the app: they will usually think it is their fault.
 Same goes for the application failing or behaving in an unexpected way: most users think they are "doing it wrong", instead of blaming the designer of the software.
 
 > When users are astonished they usually assume that they have made a mistake; they are unlikely to realize that the page has astonished them. They are more likely to feel that they are at fault for not anticipating the page. Don't take advantage of this; making users feel stupid is not endearing.
@@ -345,7 +344,7 @@ Here, as a user, it is way easier to understand what went wrong: we have moved f
 Perfect way to reduce your bug tracker incoming tickets!
 
 This is a way to do it natively in Shiny, but note that you can also use the  `{shinyAlert}` package to implement alerts. 
-It's also possible to build your own with a little bit of HTML, CSS and JavaScript, as shown on [the notifyjsexample repo](https://github.com/ColinFay/notifyjsexample).
+It is also possible to build your own with a little bit of HTML, CSS and JavaScript, as shown on [the notifyjsexample repo](https://github.com/ColinFay/notifyjsexample).
 
 ## The danger of feature-creep
 
@@ -392,7 +391,7 @@ In the `{tidytuesday201942}` application example, let's imagine all the elements
 ![](img/tidytuesdayapp.png)
 
 So what should we do? 
-Prevent ourselves from implementing "full reactivity": instead, we'll add a user input that will launch the computation. 
+Prevent ourselves from implementing "full reactivity": instead, we will add a user input that will launch the computation. 
 The simplest solution being a button so that the user signals to the application than now they are ready for the application to compute what they have parametrized.
 
 ### Too much interactivity 
@@ -482,7 +481,7 @@ One other HTML method you can use is tags attributes as metadata.
 Tags attributes are complementary elements you can add to a tag to add information: most of the time, you will be using it to add a CSS class, and identifier, or maybe some events like `onclick`^[
 See the JavaScript chapter.
 ].
-But these can also be used to add, for example, an alternate text to an image: this `alt` being the one which is read when the image is not available, either because the page could notreach the resource, or because the person navigating the app is using a screen to speech technology. 
+But these can also be used to add, for example, an alternate text to an image: this `alt` being the one which is read when the image is not available, either because the page could not reach the resource, or because the person navigating the app is using a screen to speech technology. 
 
 ```{r 06-ux-matters-7, eval = FALSE}
 library(shiny)
@@ -510,7 +509,7 @@ What makes these two things similar (semantic tags and tags metadata) is that th
 But these elements are made for people with disabilities, and especially users who might be using screen to speech technologies: these visitors use a software that scans the textual content of the page and reads it, and that helps navigate through the page. 
 
 This navigation is also crucial when it comes to screen to speech technology: these software will be able to read the `<title>` tag, jump to the `<nav>`, or straight to the `<article>` on the page. 
-Hence the importance of structuring the page: these technologies need the app to be built in a structured way, so that it's possible to jump from one section to another, and other common tasks a fully capable user will commonly do.
+Hence the importance of structuring the page: these technologies need the app to be built in a structured way, so that it is possible to jump from one section to another, and other common tasks a fully capable user will commonly do.
 
 Some other tags exists and can be used for semantic purpose: for example `<address>`, `<video>`, or `<label>`.
 
@@ -563,7 +562,7 @@ library(shiny)
 
 ui <- fluidPage(
   textInput("text", ""),
-  actionButton("send", "Don't click hit enter"),
+  actionButton("send", "Do not click hit enter"),
   verbatimTextOutput("typed"),
   nter("send", "text") # trigger 'send' button when 'text' is active.
 )
@@ -583,11 +582,11 @@ shinyApp(ui, server)
 #### Color choices
 
 Color blindness is also a common impairment when it comes to web accessibility.
-And it's a rather common deficiency: according to [colourblindawareness.org](http://www.colourblindawareness.org/), _"color (color) blindness (color vision deficiency, or CVD) affects approximately 1 in 12 men (8%) and 1 in 200 women in the world"_.
+And it is a rather common deficiency: according to [colourblindawareness.org](http://www.colourblindawareness.org/), _"color (color) blindness (color vision deficiency, or CVD) affects approximately 1 in 12 men (8%) and 1 in 200 women in the world"_.
 
 Keeping in mind this prevalence of color blindness is even more important in the context of Shiny, where we are developing data science products, which most of the time include data visualization. 
 If designed wrong, dataviz can be unreadable for some specific type of color blindness. 
-That's why we recommend using the `viridis` palette, which has been created to be readable by the most common types of color blindness. 
+That is why we recommend using the `viridis` palette, which has been created to be readable by the most common types of color blindness. 
 
 Here are for example a visualization through the lens of various type of color blindness: 
 
