--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -166,7 +166,7 @@ This library is particularly interesting when it comes to Shiny as it does not n
 
 (ref:gremlinscap) Example of using `gremlins.js` on the "prenoms" Shiny application.
 
-```{r gremlins, echo=FALSE, fig.cap="(ref:gremlinscap)"}
+```{r 12-step-by-step-secure-5, echo=FALSE, fig.cap="(ref:gremlinscap)"}
 knitr::include_graphics("img/gremlins.png")
 ```
 
@@ -174,7 +174,7 @@ And if you want to scale this, you can also combine it with `{shinyloadtest}` [@
 
 With `{crrry}`, this `gremlins` test comes for free: 
 
-```{r 12-step-by-step-secure-5 }
+```{r 12-step-by-step-secure-6 }
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
   chrome_port = httpuv::randomPort(),
@@ -195,7 +195,7 @@ This package, created and maintained by RStudio, allows you to do a series of sc
 If you are building your application with `{golem}`, you will need to add an `app.R` file at the root of your package, then run `shinytest::recordTest()`: 
 
 
-```{r 12-step-by-step-secure-6, eval = FALSE}
+```{r 12-step-by-step-secure-7, eval = FALSE}
 golem::add_rstudioconnect_file()
 shinytest::recordTest()
 ```
@@ -205,13 +205,13 @@ Using this button, you can take various recording of your shiny application at d
 
 (ref:shinytestcap) General view of a `{shinytest}` window.
 
-```{r, echo=FALSE, fig.cap="(ref:shinytestcap)"}
+```{r 12-step-by-step-secure-8, echo=FALSE, fig.cap="(ref:shinytestcap)"}
 knitr::include_graphics("img/shinytest.png")
 ```
 
 Then, you can do some changes in your app, and run:
 
-```{r 12-step-by-step-secure-7, eval = FALSE}
+```{r 12-step-by-step-secure-9, eval = FALSE}
 shinytest::testApp()
 ```
 
@@ -219,7 +219,7 @@ If the `{shinytest}` package detects a visual change in the application, you wil
 
 ### Testing the app load
 
-```{r 12-step-by-step-secure-8, include=FALSE, error=TRUE}
+```{r 12-step-by-step-secure-10, include=FALSE, error=TRUE}
 try({system("docker rm hexmake")})
 ```
 
@@ -230,11 +230,11 @@ The idea with `{shinyloadtest}` is to first record a session where you mimic a u
 Once the session has been replayed several times mimicking the session you have recorded, you have access to a report of the behavior of your app. 
 
 
-```{r 12-step-by-step-secure-9 }
+```{r 12-step-by-step-secure-11 }
 library(shinyloadtest)
 ```
 
-```{r 12-step-by-step-secure-10, eval = FALSE}
+```{r 12-step-by-step-secure-12, eval = FALSE}
 # Starting your app in another process
 p <- processx::process$new(
   "Rscript", c("-e", "options('shiny.port'= 2811);hexmake::run_app()")
@@ -247,7 +247,7 @@ browseURL("http:://localhost:2811")
 
 Record the tests, potentially in a new dir: 
 
-```{r 12-step-by-step-secure-11, eval = FALSE}
+```{r 12-step-by-step-secure-13, eval = FALSE}
 fs::dir_create("shinylogs")
 withr::with_dir(
   "shinylogs", {
@@ -263,25 +263,25 @@ The `shinycannon` command line tools take several argument: the path the `.log` 
 
 Then, go to your terminal and run:
 
-```{bash 12-step-by-step-secure-12, eval = FALSE}
+```{bash 12-step-by-step-secure-14, eval = FALSE}
 shinycannon shinylogs/recording.log http://localhost:2811 --workers 10 --output-dir shinylogs/run1
 ```
 
 And now, we have new files inside the folder, corresponding to the session recordings. 
 
-```{r 12-step-by-step-secure-13 }
+```{r 12-step-by-step-secure-15 }
 fs::dir_tree("shinylogs", recurse = FALSE)
 ```
 
 Good news: we do not have to manually analyze these files—`{shinyloadtest}` offers a series of wrapper functions to do that. 
 
-```{r 12-step-by-step-secure-14, message = FALSE}
+```{r 12-step-by-step-secure-16, message = FALSE}
 shinyload_runs <- shinyloadtest::load_runs("5 workers" = "shinylogs/run1")
 ```
 
 We now have a data.frame with 
 
-```{r 12-step-by-step-secure-15 }
+```{r 12-step-by-step-secure-17 }
 dplyr::glimpse(shinyload_runs)
 ```
 
@@ -290,19 +290,19 @@ Here are some examples:
 
 + `slt_session_duration()` plots the session duration, with the various types of event that takes computation time: JS and CSS load, R computation... 
 
-```{r 12-step-by-step-secure-16 }
+```{r 12-step-by-step-secure-18 }
 slt_session_duration(shinyload_runs)
 ```
 
 + `slt_waterfall()` plots the waterfall graph of session durations, ordered by events. 
 
-```{r 12-step-by-step-secure-17 }
+```{r 12-step-by-step-secure-19 }
 slt_waterfall(shinyload_runs)
 ```
 
 And if you need to bundle everything into an HTML reports, `shinyloadtest_report()` is what you are looking for. 
 
-```{r 12-step-by-step-secure-18, eval = FALSE}
+```{r 12-step-by-step-secure-20, eval = FALSE}
 shinyloadtest_report(shinyload_runs)
 ```
 
@@ -333,25 +333,25 @@ That's where `{dockerstats}` [@R-dockerstats] can come into play: this package i
 
 You can get the `{dockerstats}` package from GitHub with:
 
-```{r 12-step-by-step-secure-19, eval = FALSE}
+```{r 12-step-by-step-secure-21, eval = FALSE}
 remotes::install_github("ColinFay/dockerstats")
 ```
 
 With these stats, we can monitor the load on the app when it is run in a docker container. 
 
-```{r 12-step-by-step-secure-20, echo = FALSE, error = TRUE}
+```{r 12-step-by-step-secure-22, echo = FALSE, error = TRUE}
 try({system("docker rm hexmake")})
 system("docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", wait = FALSE)
 Sys.sleep(5)
 ```
 
-```{r 12-step-by-step-secure-21, eval = FALSE}
+```{r 12-step-by-step-secure-23, eval = FALSE}
 system("docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", wait = FALSE)
 ```
 
 Let's say now we want the stats for the hexmake container:
 
-```{r 12-step-by-step-secure-22 }
+```{r 12-step-by-step-secure-24 }
 dockerstats::dockerstats("hexmake")
 ```
 
@@ -360,14 +360,14 @@ But let's push it a little bit an mimic a lot of connections.
 
 To do that, we can replay our `shinycannon` call, with at the same time using the `dockerstats_recurse()` function, that will recursively call `dockerstats()` on a regular interval. 
 
-```{bash 12-step-by-step-secure-23, eval = FALSE}
+```{bash 12-step-by-step-secure-25, eval = FALSE}
 shinycannon shinylogs/recording.log http://localhost:2811 --workers 10 --output-dir shinylogs/run2
 ```
 
 Let's launch at the same time a `dockerstats_recurse()`
 For example, here, we will print, on each loop, the `MemUsage` of the container, then saving the data inside a `dockerstats.csv` file. 
 
-```{r 12-step-by-step-secure-24, eval = FALSE}
+```{r 12-step-by-step-secure-26, eval = FALSE}
 dockerstats_recurse(
   "hexmake",
   callback = function(res){
@@ -390,24 +390,24 @@ Here is what both these processes look side to side:
 
 (ref:dockerstatscap) `{dockerstats}` and `shinycannon` running side-by-side at the same time.
 
-```{r, echo=FALSE, fig.cap='(ref:dockerstatscap)'}
+```{r 12-step-by-step-secure-27, echo=FALSE, fig.cap='(ref:dockerstatscap)'}
 knitr::include_graphics("img/hexmake-dockerstats.png")
 ```
 
 As you can see, as the number of connections grow, the memory usage grows. 
 And we now have a csv with the evolution of the `docker stats` records over time!
 
-```{r 12-step-by-step-secure-25 }
+```{r 12-step-by-step-secure-28 }
 docker_stats <- read_appended_csv(
   "shinylogs/dockerstats.csv"
 )
 ```
 
-```{r 12-step-by-step-secure-26 }
+```{r 12-step-by-step-secure-29 }
 dplyr::glimpse(docker_stats)
 ```
 
-```{r 12-step-by-step-secure-27, include=FALSE}
+```{r 12-step-by-step-secure-30, include=FALSE}
 try({system("docker kill hexmake")})
 ```
 
@@ -415,7 +415,7 @@ If you need a deeper look into the connection between application actions and th
 
 Let's record the computation of the `hexmake` container containing the same app as before. 
 
-```{r 12-step-by-step-secure-28 }
+```{r 12-step-by-step-secure-31 }
 system(
   "docker run -p 2708:80 --rm --name hexmake2 -d colinfay/hexmake", 
   wait = FALSE
@@ -447,7 +447,7 @@ system("docker kill hexmake2")
 
 And draw a small graph of this evolution: 
 
-```{r 12-step-by-step-secure-29 }
+```{r 12-step-by-step-secure-32 }
 library(dplyr, warn.conflicts = FALSE)
 results <- results %>% 
   mutate(
@@ -524,7 +524,7 @@ These kind of bugs are even harder to detect as `{geojsonsf}` was not a direct d
 
 (ref:geojsoncap) Breaking changes in `{geojsonsf}`, a dependency of a dependency of our Shiny application.
 
-```{r, echo=FALSE, fig.cap='(ref:geojsoncap)'}
+```{r 12-step-by-step-secure-33, echo=FALSE, fig.cap='(ref:geojsoncap)'}
 knitr::include_graphics("img/geojson.png")
 ```
 
@@ -541,7 +541,7 @@ That means that you can have `{geojsonsf}` version `1.2.1` in one of your projec
 `r right_link("Introduction to renv", "https://rstudio.github.io/renv/articles/renv.html")`
 
 The first thing to do with `{renv}` is initiating it with the `init()` function. 
-```{r 12-step-by-step-secure-30, eval = FALSE}
+```{r 12-step-by-step-secure-34, eval = FALSE}
 library(renv)
 init()
 ```
@@ -551,7 +551,7 @@ This function does several things:
 + Create/modify the `.Rprofile` file at the root of your project. 
 Here is an example of what this files may look like inside an empty project: 
 
-```{r comment="", echo = FALSE}
+```{r 12-step-by-step-secure-35, comment="", echo = FALSE}
 readLines("data-raw/.Rprofile")
 ```
 
@@ -559,7 +559,7 @@ In this example, there is just one call to a script, one located at `renv/activa
 
 + It creates a `renv.lock` file, which will list all the package dependencies
 
-```{r comment="", echo = FALSE}
+```{r 12-step-by-step-secure-36, comment="", echo = FALSE}
 readLines("data-raw/renv.lock")
 ```
 
@@ -570,7 +570,7 @@ Bitbucket, and even local repositories.
 
 The `renv/` folder contains a series of files that that store your settings and the necessary packages, using a structure that mimics a local repository.
 
-```{r}
+```{r 12-step-by-step-secure-37}
 fs::dir_tree("data-raw/renv/")
 ```
 
@@ -582,25 +582,25 @@ When you need a new package, you will have to install it in your local library.
 The fastest way to install new packages in your `{renv}` powered project is by using the `install.packages` function, which is shimmed by `{renv}`. 
 This shim will search into the local cache to see if the package has already been cached, and if it is not, it will install and link it.
 
-```{r 12-step-by-step-secure-31, eval = FALSE}
+```{r 12-step-by-step-secure-38, eval = FALSE}
 install.packages("attempt")
 ```
 
 We will now add a little call to this library now:
 
-```{r}
+```{r 12-step-by-step-secure-39}
 write("library(attempt)", "script.R")
 ```
 
 Once you want to update your `{renv}` `Lockfile`, call `snapshot()`
 
-```{r 12-step-by-step-secure-32, eval = FALSE}
+```{r 12-step-by-step-secure-40, eval = FALSE}
 renv::snapshot(confirm = FALSE)
 ```
 
 Note that if you are building an application as a package, use `renv::snapshot(type = "explicit")` (need version > `0.9.3-99`): this will only capture the dependencies listed in the `DESCRIPTION` file.
 
-```{r comment="", echo = FALSE}
+```{r 12-step-by-step-secure-41, comment="", echo = FALSE}
 readLines("data-raw/renv.lock")
 ```
 
@@ -651,7 +651,7 @@ If you have a look at the `03_deploy.R` file in the `dev` folder, you will find 
 
 For example, to create a `Dockerfile` for a `{golem}` project, you can run, from the root of your package:
 
-```{r, eval=FALSE}
+```{r 12-step-by-step-secure-42, eval=FALSE}
 golem::add_dockerfile()
 ```
 
@@ -659,7 +659,7 @@ Let's take some time to understand file, or how we could be building it from scr
 
 1. `FROM`
 
-```{r 12-step-by-step-secure-33, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-43, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[1] %>% 
   glue::as_glue()
 ```
@@ -668,7 +668,7 @@ This line defines what version of R to use for deploying your application.
 This `FROM` line is the one that sets an image to start from: you rarely (if ever) build a Docker image from nothing, but instead you use an existing image on top of which you build your own image.
 Here, we choose one of the [r-ver](https://hub.docker.com/r/rocker/r-ver/) docker images, based on the output of:
 
-```{r 12-step-by-step-secure-34, comment=""}
+```{r 12-step-by-step-secure-44, comment=""}
 R.Version()$version.string
 ```
 
@@ -677,21 +677,21 @@ R.Version()$version.string
 The `RUN` calls in the file refers to bash calls that are used to build the image. 
 For example, the second line of the `Dockerfile` installs all the system requirements needed by our application.
 
-```{r 12-step-by-step-secure-35, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-45, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[2] %>% 
   glue::as_glue()
 ```
 
 In the subsequent `RUN` calls, `{golem}` chooses to call `remotes::install_version()` to be sure we install the version of the package that matches the one from your computer.
 
-```{r 12-step-by-step-secure-36, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-46, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[6] %>% 
   glue::as_glue()
 ```
 
 As you can see, it matches the local version: 
 
-```{r 12-step-by-step-secure-37, comment=""}
+```{r 12-step-by-step-secure-47, comment=""}
 packageVersion("config")
 ```
 
@@ -700,7 +700,7 @@ packageVersion("config")
 This Docker entry takes a folder or a file, and copies it inside the image. 
 With `{golem}`, we are adding the current project, containing the app, to a folder called `/build_zone`. 
 
-```{r 12-step-by-step-secure-38, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-48, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[13] %>% 
   glue::as_glue()
 ```
@@ -709,7 +709,7 @@ readLines("data-raw/Dockerfile")[13] %>%
 
 This command defines which port of the container will be available from the outside of the container.
 
-```{r 12-step-by-step-secure-39, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-49, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[16] %>% 
   glue::as_glue()
 ```
@@ -719,7 +719,7 @@ readLines("data-raw/Dockerfile")[16] %>%
 This final command is the one that is launched when you run a container. 
 With a `{shiny}` app, this command is the one that launches the application.  
 
-```{r 12-step-by-step-secure-40, echo = FALSE, comment=""}
+```{r 12-step-by-step-secure-50, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[16] %>% 
   glue::as_glue()
 ```
@@ -729,7 +729,7 @@ readLines("data-raw/Dockerfile")[16] %>%
 If you want to do everything from the R command line, the `{dockerfiler}` package [@R-dockerfiler] is here for you! 
 This package allows you to generate a `Dockerfile` straight from R: 
 
-```{r 12-step-by-step-secure-41 }
+```{r 12-step-by-step-secure-51 }
 library(dockerfiler)
 my_dock <- Dockerfile$new()
 my_dock$RUN("apt-get update && apt-get install -y  git-core libcurl4-openssl-dev")
