--- a/index.Rmd
+++ b/index.Rmd
@@ -108,7 +108,7 @@ We will try to update the online version whenever changes are made to the codeba
 
 The current version of this book has been compiled on:
 
-```{r index-2}
+```{r index-2 }
 Sys.Date()
 ```
 
@@ -192,7 +192,7 @@ if (!requireNamespace("cloc")){
 ```{r index-5, include=FALSE}
 # automatically create a bib database for R packages
 knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
+  attachment::att_from_rmds("."), 'bookdown', 'knitr', 'rmarkdown'
 ), 'packages.bib')
 try(file.copy("packages.bib", "docs/packages.bib"))
 try(file.copy("packages.bib", "docs/wip/packages.bib"))
