no recurse in index att_from_rmds

--- a/index.Rmd
+++ b/index.Rmd
@@ -190,9 +190,9 @@ if (!requireNamespace("cloc")){
 ```
 
 ```{r index-5, include=FALSE}
-# automatically create a bib database for R packages
+#automatically create a bib database for R packages
 knitr::write_bib(c(
-  attachment::att_from_rmds("."), 'bookdown', 'knitr', 'rmarkdown'
+  attachment::att_from_rmds(".", recursive = FALSE), 'bookdown', 'knitr', 'rmarkdown'
 ), 'packages.bib')
 try(file.copy("packages.bib", "docs/packages.bib"))
 try(file.copy("packages.bib", "docs/wip/packages.bib"))
