added library(dockerstats) in 12

--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -337,6 +337,11 @@ You can get the `{dockerstats}` package from GitHub with:
 remotes::install_github("ColinFay/dockerstats")
 ```
 
+```{r}
+library(dockerstats)
+```
+
+
 With these stats, we can monitor the load on the app when it is run in a docker container. 
 
 ```{r 12-step-by-step-secure-22, echo = FALSE, error = TRUE}
