eval = FALSE in docker related chuncks

--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -116,7 +116,7 @@ And to do the tests in a `puppeteer` spirit, you can refer to the `{crrry}` pack
 
 Here is an example:
 
-```{r 12-step-by-step-secure-2 }
+```{r 12-step-by-step-secure-2, eval = FALSE}
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
   chrome_port = httpuv::randomPort(), # Note that you will need httpuv >= 1.5.2
@@ -136,7 +136,7 @@ You can then call one of the `test` object methods:
 
 Of course, the interesting part is doing "bulk testing" of your application, for example by setting a series of values to an input:
 
-```{r 12-step-by-step-secure-3 }
+```{r 12-step-by-step-secure-3, eval = FALSE}
 for (i in letters[1:5]){
   test$shiny_set_input(
     "main_ui_1-left_ui_1-pkg_name_ui_1-package", 
@@ -147,7 +147,7 @@ for (i in letters[1:5]){
 
 And once your test is done, do not forget to close the connection!
 
-```{r 12-step-by-step-secure-4 }
+```{r 12-step-by-step-secure-4, eval = FALSE}
 test$stop()
 ```
 
@@ -174,7 +174,7 @@ And if you want to scale this, you can also combine it with `{shinyloadtest}` [@
 
 With `{crrry}`, this `gremlins` test comes for free: 
 
-```{r 12-step-by-step-secure-6 }
+```{r 12-step-by-step-secure-6, eval = FALSE}
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
   chrome_port = httpuv::randomPort(),
@@ -205,7 +205,7 @@ Using this button, you can take various recording of your shiny application at d
 
 (ref:shinytestcap) General view of a `{shinytest}` window.
 
-```{r 12-step-by-step-secure-8, echo=FALSE, fig.cap="(ref:shinytestcap)"}
+```{r 12-step-by-step-secure-8, echo=FALSE, fig.cap="(ref:shinytestcap)", eval = FALSE}
 knitr::include_graphics("img/shinytest.png")
 ```
 
@@ -219,7 +219,7 @@ If the `{shinytest}` package detects a visual change in the application, you wil
 
 ### Testing the app load
 
-```{r 12-step-by-step-secure-10, include=FALSE, error=TRUE}
+```{r 12-step-by-step-secure-10, include=FALSE, error=TRUE, eval = FALSE}
 try({system("docker rm hexmake")})
 ```
 
@@ -344,7 +344,7 @@ library(dockerstats)
 
 With these stats, we can monitor the load on the app when it is run in a docker container. 
 
-```{r 12-step-by-step-secure-22, echo = FALSE, error = TRUE}
+```{r 12-step-by-step-secure-22, echo = FALSE, error = TRUE, eval = FALSE}
 try({system("docker rm hexmake")})
 system("docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", wait = FALSE)
 Sys.sleep(5)
@@ -356,7 +356,7 @@ system("docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", wait = FALS
 
 Let's say now we want the stats for the hexmake container:
 
-```{r 12-step-by-step-secure-24 }
+```{r 12-step-by-step-secure-24, eval = FALSE}
 dockerstats::dockerstats("hexmake")
 ```
 
@@ -412,7 +412,7 @@ docker_stats <- read_appended_csv(
 dplyr::glimpse(docker_stats)
 ```
 
-```{r 12-step-by-step-secure-30, include=FALSE}
+```{r 12-step-by-step-secure-30, include=FALSE, eval = FALSE}
 try({system("docker kill hexmake")})
 ```
 
@@ -420,7 +420,7 @@ If you need a deeper look into the connection between application actions and th
 
 Let's record the computation of the `hexmake` container containing the same app as before. 
 
-```{r 12-step-by-step-secure-31 }
+```{r 12-step-by-step-secure-31, eval = FALSE}
 system(
   "docker run -p 2708:80 --rm --name hexmake2 -d colinfay/hexmake", 
   wait = FALSE
@@ -452,7 +452,7 @@ system("docker kill hexmake2")
 
 And draw a small graph of this evolution: 
 
-```{r 12-step-by-step-secure-32 }
+```{r 12-step-by-step-secure-32, eval = FALSE}
 library(dplyr, warn.conflicts = FALSE)
 results <- results %>% 
   mutate(
@@ -571,7 +571,7 @@ readLines("data-raw/renv.lock")
 As we have initiated an empty project, we do not have any dependencies here. 
 If you run this command in a project that already has scripts and dependencies, `{renv}` will try to locate them all, and add them to this file. 
 Note that these packages can come from CRAN, Bioconductor, GitHub, Gitlab, 
-Bitbucket, and even local repositories.
+Bitbucket, and even local repositories. 
 
 The `renv/` folder contains a series of files that that store your settings and the necessary packages, using a structure that mimics a local repository.
 
