--- a/17-optimizing-shiny-code.Rmd
+++ b/17-optimizing-shiny-code.Rmd
@@ -526,6 +526,10 @@ In that case, instead of waiting for the very last input, you will need to build
 This type of implementation is a little bit more complex so we will not detail it all inside this chapter, but here is a small implementation  using `{liteq}`. 
 
 ```{r 17-optimizing-shiny-code-17 }
+library(promises)
+library(future)
+plan(multisession)
+
 library(liteq)
 db <- tempfile()
 q <- ensure_queue("jobs", db = db)
